--- a/src/components/molecules/sequenceNav.module.scss
+++ b/src/components/molecules/sequenceNav.module.scss
@@ -1,10 +1,6 @@
 .sequenceNav {
-	overflow: hidden;
-	margin-bottom: 1rem;
-	.previous {
-		float: left;
-	}
-	.next {
-		float: right;
-	}
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 16px;
 }
