--- a/src/components/organisms/sequence.module.scss
+++ b/src/components/organisms/sequence.module.scss
@@ -1,8 +1,8 @@
 @import '../../styles/common';
 
 .container {
+	padding: $tease-padding;
 	background: $ts-cream;
-	padding: 16px 24px;
 }
 
 .titleLockup {
