--- a/src/components/molecules/card/sequence.module.scss
+++ b/src/components/molecules/card/sequence.module.scss
@@ -7,7 +7,7 @@ $container-padding: 16px;
 	padding: $container-padding;
 	border-radius: 16px;
 	overflow: hidden;
-	transition: background-color $transition-medium;
+	transition-duration: $transition-medium;
 	&.AUDIOBOOK {
 		--sequenceHeadingColor: #{$ts-white};
 		--sequenceTextColor: #{$ts-white};
