--- a/src/components/molecules/card/sequence.module.scss
+++ b/src/components/molecules/card/sequence.module.scss
@@ -92,6 +92,7 @@ $container-padding: 16px;
 	align-items: center;
 	> svg {
 		margin-right: 12px;
+		transition: none;
 	}
 	&:hover {
 		color: $ts-red;
