--- a/src/components/molecules/card/sequence.module.scss
+++ b/src/components/molecules/card/sequence.module.scss
@@ -15,6 +15,13 @@ $container-padding: 16px;
 		background-color: $ts-bookH;
 		--sequenceBackgroundColorHover: #{$ts-darkened-bookH};
 	}
+	&.BIBLE_BOOK {
+		--sequenceHeadingColor: #{$ts-white};
+		--sequenceTextColor: #{$ts-white};
+		--sequenceTextSecondaryColor: #{$ts-lightTone};
+		background-color: $ts-bibleH;
+		--sequenceBackgroundColorHover: #{$ts-darkened-bibleH};
+	}
 	&.MUSIC_ALBUM {
 		--sequenceHeadingColor: #{$ts-dark};
 		--sequenceTextColor: #{$ts-midTone};
@@ -65,9 +72,22 @@ $container-padding: 16px;
 	&.audiobookTitle {
 		font-weight: 400;
 	}
+	&.bibleBookTitle {
+		text-align: center;
+		margin-bottom: 4px;
+		text-transform: uppercase;
+		font-size: 19px;
+		letter-spacing: 0.2em;
+	}
 	&.storyTitle {
 		font-weight: 600;
 	}
+}
+
+.bibleReadBy {
+	font-weight: 300;
+	text-align: center;
+	color: $ts-lightTone;
 }
 
 .kicker {
