--- a/src/components/molecules/card/sequence.module.scss
+++ b/src/components/molecules/card/sequence.module.scss
@@ -8,6 +8,13 @@ $container-padding: 16px;
 	border-radius: 16px;
 	overflow: hidden;
 	transition-duration: $transition-medium;
+	&.EGWAUDIOBOOK {
+		--sequenceHeadingColor: #{$ts-white};
+		--sequenceTextColor: #{$ts-white};
+		--sequenceTextSecondaryColor: #{$ts-lightTone};
+		background-color: $ts-egw;
+		--sequenceBackgroundColorHover: #{$ts-darkened-egw};
+	}
 	&.AUDIOBOOK {
 		--sequenceHeadingColor: #{$ts-white};
 		--sequenceTextColor: #{$ts-white};
@@ -87,6 +94,11 @@ $container-padding: 16px;
 .bibleReadBy {
 	font-weight: 300;
 	text-align: center;
+	color: $ts-lightTone;
+}
+
+.bookReadBy {
+	font-weight: 300;
 	color: $ts-lightTone;
 }
 
