Co-authored-by: Nathan Arthur <nathan@nathanarthur.com>

--- a/src/components/molecules/card/sequence.module.scss
+++ b/src/components/molecules/card/sequence.module.scss
@@ -9,6 +9,7 @@ $container-padding: 16px;
 	overflow: hidden;
 	transition-duration: $transition-medium;
 	&.EGWAUDIOBOOK {
+		//egw
 		--sequenceHeadingColor: #{$ts-white};
 		--sequenceTextColor: #{$ts-white};
 		--sequenceTextSecondaryColor: #{$ts-lightTone};
